fixed overflowing bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,8 @@ body {
     font-family: "Roboto";
     height: 100vh;
     font-size: 2rem;
+    background-color: #f0f0f0;
+
 }
 button{
     font-size: 1.5rem;
@@ -61,13 +63,13 @@ table {
 .content{
     width: 100%;
     height: 100%;
-    background-color: #f0f0f0;
     padding-top: 10px;
 }
 
 .bookContainer{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .bookCard{
